--- a/frontend/src/package.json
+++ b/frontend/src/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
+    "nuxt-socket-io": "^2.0.3",
     "vue": "^2.6.14",
+    "vue-qrcode-component": "^2.1.1",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "vuetify": "^2.6.1",
