vue qr code, music list component

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     build: ./stellar-operations
     tty: true
     volumes:
-      - ./stellar-operations:/src
+      - ./stellar-operations/src:/nodeapp/src
     ports:
       - '3001:3000'
     environment:
