--- a/frontend/src/package.json
+++ b/frontend/src/package.json
@@ -9,6 +9,7 @@
     "generate": "../node_modules/.bin/nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
     "nuxt-socket-io": "^2.0.3",
