update music list component design, new songs

--- a/backend/src/.env.example
+++ b/backend/src/.env.example
@@ -1,18 +1,13 @@
-DB_USER=
-DB_PASSWORD=
-DB_HOST=
-DB_PORT=
-DB_NAME=
+DB_USER=admin
+DB_PASSWORD=1234567
+DB_HOST=mongo
+DB_PORT=27017
+DB_NAME=jukebox
 
-STELLAR_SERVER=
+STELLAR_SERVER=https://horizon-testnet.stellar.org
 
-#ACCOUNT ZA PRIMANJE
+# RECEIVING ACCOUNT
 RECEIVER_PUBLIC_KEY=
-RECEIVER_PRIVATE_KEY=
-
-#ACCOUNT ZA SLANJE
-SENDING_PUBLIC_KEY=
-SENDING_PRIVATE_KEY=
 
 SONG_PRICE=1
 APP_PORT=3000
