--- a/stellar-operations/src/.env.example
+++ b/stellar-operations/src/.env.example
@@ -1,9 +1,9 @@
-STELLAR_SERVER=
+STELLAR_SERVER=https://horizon-testnet.stellar.org
 
-#ACCOUNT ZA PRIMANJE
-RECEIVER_PRIVATE_KEY=
-RECEIVER_PUBLIC_KEY=
-
-#ACCOUNT ZA SLANJE
+# SENDING ACCOUNT
 SENDING_PRIVATE_KEY=
 SENDING_PUBLIC_KEY=
+
+# RECEIVING ACCOUNT
+RECEIVER_PUBLIC_KEY=
+
