production docker, frontend design

--- a/backend/src/.env.example
+++ b/backend/src/.env.example
@@ -4,6 +4,9 @@ DB_HOST=mongo
 DB_PORT=27017
 DB_NAME=jukebox
 
+MONGO_ROOT_USERNAME=
+MONGO_ROOT_PASSWORD=
+
 STELLAR_SERVER=https://horizon-testnet.stellar.org
 
 # RECEIVING ACCOUNT
