--- a/backend/src/package.json
+++ b/backend/src/package.json
@@ -4,7 +4,8 @@
   "description": "Crypto jukebox backend",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon -L index.js"
+    "dev": "nodemon -L index.js",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "Ivan Ostojic",
