--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,8 +16,6 @@ services:
       - ./stellar-operations/src:/nodeapp/src
     ports:
       - '3001:3000'
-    environment:
-      - TEST=3000
   backend:
     build: ./backend
     restart: unless-stopped
@@ -28,8 +26,9 @@ services:
     depends_on:
       - mongo
     environment:
-      - APP_URL=http://localhost:8082/
       - APP_PORT=3000
+    command:
+      - npm run dev
   mongo:
     image: mongo
     restart: unless-stopped
