--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -27,9 +27,9 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: ${MONGO_ROOT_USERNAME}
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_ROOT_PASSWORD}
-      MONGO_INITDB_DATABASE: ${DB_NAME}
-      MONGO_USERNAME: ${DB_USER}
-      MONGO_PASSWORD: ${DB_PASSWORD}
+      MONGO_INITDB_DATABASE: ${MONGO_DB_NAME}
+      MONGO_USERNAME: ${MONGO_DB_USER}
+      MONGO_PASSWORD: ${MONGO_DB_PASSWORD}
     volumes:
       - ./database/mongo-entrypoint.sh:/docker-entrypoint-initdb.d/mongo-init.sh:ro
       - ~/mongo-data/jukebox:/data/db
