commented npm build inside Docker, decided to manually copy dist folder from local

--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -9,6 +9,8 @@ services:
     ports:
       - '8080:80'
     tty: true
+    volumes:
+      - ./frontend/src/dist:/usr/share/nginx/html
   backend:
     build: ./backend
     restart: unless-stopped
