--- a/frontend/Dockerfile-prod
+++ b/frontend/Dockerfile-prod
@@ -1,13 +1,13 @@
-# build stage
-FROM node:16 as build-stage
-COPY /src/package.json /nodeapp/src/package.json
-WORKDIR /nodeapp/src
-RUN npm install && mv /nodeapp/src/node_modules /nodeapp/node_modules
-COPY /src /nodeapp/src
-RUN npm run generate
+## build stage
+#FROM node:16 as build-stage
+#COPY /src/package.json /nodeapp/src/package.json
+#WORKDIR /nodeapp/src
+#RUN npm install && mv /nodeapp/src/node_modules /nodeapp/node_modules
+#COPY /src /nodeapp/src
+#RUN npm run generate
 
 # production stage
 FROM nginx:stable-alpine as production-stage
-COPY --from=build-stage /nodeapp/src/dist /usr/share/nginx/html
+#COPY --from=build-stage /nodeapp/src/dist /usr/share/nginx/html
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
